fix layout issue on mobile

--- a/Components/LaunchCard.css
+++ b/Components/LaunchCard.css
@@ -4,6 +4,7 @@
 }
 @media only screen and (max-width: 1024px) {
   .launch-card {
+    height: 260px !important;
     width: 100% !important;
   }
 
